# NeguPi

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  index.html  params.json
arduino/MPU6050_DMP6/: MPU6050_DMP6.ino
documentation/: Doxyfile
examples/: .gitignore  CMakeLists.txt  Makefile  NeguPi-CameraBox  NeguPi-Timelapse  blink.cc  camerabox.cc  camerabox.h  cameratest.py  imageoptions.cc  imageoptions.h  mpu6050_1.cc  mpu6050_dmp.cc  readGPS.cc  readMPU6050.cc  recognition.cc  statemachine.cc  timelapse.cc  timelapse.h  videocapture.cc  videocapture.py
html/: _m_c_p23_s17_8h.html  _m_c_p23_s17_8h_source.html  _m_c_p23_s17_fake_8h.html  _m_c_p23_s17_fake_8h_source.html  _negu_pi_daemon_8h.html  _negu_pi_daemon_8h_source.html  _negu_pi_logger_8h.html  _negu_pi_logger_8h_source.html  _pi_face_8h.html  _pi_face_8h_source.html  _pi_face_fake_8h_source.html  _pi_face_org_8h_source.html  _pi_face_state_machine_8h.html  _pi_face_state_machine_8h_source.html  _v_m_c_p23_s17_8h.html  _v_m_c_p23_s17_8h_source.html  _v_pi_face_8h_source.html  annotated.html  class_negu_pi_1_1_log-members.html  class_negu_pi_1_1_log.html  class_negu_pi_1_1_logger-members.html  class_negu_pi_1_1_logger.html  class_negu_pi_1_1_m_c_p23_s17-members.html  class_negu_pi_1_1_m_c_p23_s17.html  class_negu_pi_1_1_m_c_p23_s17_fake-members.html  class_negu_pi_1_1_m_c_p23_s17_fake.html  class_negu_pi_1_1_pi_face-members.html  class_negu_pi_1_1_pi_face.html  class_negu_pi_1_1_pi_face_fake-members.html  class_negu_pi_1_1_pi_face_fake.html  class_negu_pi_1_1_pi_face_state_machine-members.html  class_negu_pi_1_1_pi_face_state_machine.html  class_negu_pi_1_1_v_m_c_p23_s17-members.html  class_negu_pi_1_1_v_m_c_p23_s17.html  class_pi_face_org-members.html  class_pi_face_org.html  class_v_pi_face-members.html  class_v_pi_face.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+12 more)
html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  classes_6c.js  classes_70.js  classes_76.js  enums_63.js  enums_67.js  enums_69.js  enums_72.js  enumvalues_62.js  enumvalues_64.js  enumvalues_67.js  enumvalues_68.js  enumvalues_69.js  enumvalues_6e.js  enumvalues_6f.js  enumvalues_72.js  enumvalues_73.js  enumvalues_77.js  files_6d.js  files_6e.js  files_70.js  files_76.js  functions_63.js  (+25 more)
src/: MCP23S17.cc  MCP23S17.h  MCP23S17Fake.cc  MCP23S17Fake.h  MPU6050.cc  MPU6050.h  Makefile  NeguPi.h.in  NeguPi3D.cc  NeguPi3D.h  NeguPiDaemon.cc  NeguPiDaemon.h  NeguPiFIFO.h  NeguPiI2CDevice.cc  NeguPiI2CDevice.h  NeguPiLogger.cc  NeguPiLogger.h  NeguPiMillis.cc  NeguPiMillis.h  NeguPiNMEA.cc  NeguPiNMEA.h  PiFace.cc  PiFace.h  PiFaceDaemon.cc  PiFaceDaemon.h  PiFaceFake.cc  PiFaceFake.h  PiFaceLogger.cc  PiFaceLogger.h  PiFaceOrg.h  PiFaceStateMachine.cc  PiFaceStateMachine.h  TinyGPS++.cc  TinyGPS++.h  VMCP23S17.cc  VMCP23S17.h  VPiFace.cc  VPiFace.h
tools/: .gitignore  CMakeLists.txt  Makefile  exposurecomp.cc
www/: exif.php  setup.php
